@@ -1,8 +1,11 @@
+examples/authenticate.pl
+examples/check-audio.pl
+examples/check-vimeo.pl
 examples/read_json.pl
 examples/write.pl
 lib/WWW/Tumblr.pm
 .project
+Changes
 Makefile.PL
 MANIFEST
 README
-Changes
